--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,11 @@
             <version>2.0</version>
             <scope>provided</scope>
         </dependency>
+    <dependency>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-resources-plugin</artifactId>
+    <version>3.0.2</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>jenkins-tomcat</finalName>
