--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <packaging>war</packaging>
   <version>0.0.1-SNAPSHOT</version>
   <name>jenkins-tomcat Maven Webapp</name>
-  <url>http://maven.apache.org</url>
+  <url>https://repo.maven.apache.org/maven2/</url>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
